Added invitations for games.

--- a/src/main/resources/templates/mails/invitation_notification.mustache
+++ b/src/main/resources/templates/mails/invitation_notification.mustache
@@ -1,6 +1,6 @@
 Hello, {{guest}}!
 ---
-You have been invited to play game of tic tact by by {{host}}.
+You have been invited to play game of tic tac toe by {{host}}.
 
 To start playing game click on link:
 {{{link}}}
